<resources>
    <string name="app_name">Movies 20MOB</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="about_us">About Filmes 20MOB</string>
    <string name="create_account_label">Create an account</string>
    <string name="media_poster">Movie or Series Image</string>
    <string name="info">+ Info</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="update_label">Update</string>
    <string name="version_label">Version:</string>
    <string name="developed_by_label">Developed by:</string>
    <string name="devs_label">César Rodrigues RM336648\n Rafael Barros RM336738\n Valmir Torres RM336666\n Welton Dornelas RM336708</string>
    <string name="share_movie_message">Hello, see the %1$s movie now. %2$s\n\nCheck out this and other movies in the Filmes 20MOB app. :)</string>
    <string name="share_using">Select:</string>
    <string name="menu_lauches">Releases</string>
    <string name="menu_favorite">Bookmarks</string>
    <string name="menu_profile">Profile</string>
    <string name="no_favorite_label">You don\'t have any favorites yet :(\n\nAdd at Releases screen</string>
    <string name="movie_favorite_successfully">Successfully favored movie</string>
    <string name="movie_removed_from_favorites_successfully">Movie successfully removed from favorites</string>
    <string name="synopsis">Synopsis</string>
    <string name="nearby_theaters">Movie Theaters nearby</string>
    <string name="default_notification_channel_id">News</string>
    <string name="channel_description">All the news from the world of cinema</string>
    <string name="error_default">Error! Something unexpected happened, try again!</string>
    <string name="error_debug">"Error: %1$s, stack:\n %2$s"</string>
    <string name="error_favorite_default">Failed to load favorites, please try again</string>
    <string name="error_favorite_remove">Failed to remove movie from favorites</string>
    <string name="error_home_add_favorite">Failed to add the movie, please try again</string>
    <string name="welcome_to_app">Welcome to Movies 20MOB</string>
</resources>