<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/about_us_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:padding="@dimen/margin_half"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/about_us_logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginVertical="@dimen/margin_default_half"
        android:src="@drawable/app_logo_512"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_back_button"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_us_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_default_half"
        android:text="@string/app_name"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_us_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default_half"
        android:layout_marginVertical="@dimen/margin_default_half"
        android:text="@string/version_label"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_us_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_half"
        android:textAlignment="center"
        android:textSize="@dimen/small_text_size"
        tools:text="1.0.0"
        app:layout_constraintStart_toEndOf="@id/about_us_version_label"
        app:layout_constraintTop_toTopOf="@id/about_us_version_label"
        app:layout_constraintBottom_toBottomOf="@id/about_us_version_label"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_us_developer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default_half"
        android:layout_marginVertical="@dimen/margin_half_quarter"
        android:text="@string/developed_by_label"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_version_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_us_developer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_half"
        android:text="@string/devs_label"
        android:textAlignment="center"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_developer_label" />

</androidx.constraintlayout.widget.ConstraintLayout>