<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profile_about_us_button">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_account_button"
                android:text="@string/update_label"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:padding="@dimen/margin_default"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/image_profile_width"
                android:layout_height="@dimen/image_profile_height"
                android:layout_marginVertical="@dimen/margin_triple"
                android:src="@drawable/ic_default_person"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="@dimen/border_profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_triple"
                android:layout_marginHorizontal="@dimen/margin_default_half"
                app:layout_constraintTop_toBottomOf="@id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_name_edit_text"
                    android:hint="@string/name_label"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginVertical="@dimen/margin_default"
                android:layout_marginHorizontal="@dimen/margin_default_half"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_email_edit_text"
                    android:hint="@string/email_label"
                    android:inputType="textWebEmailAddress"
                    android:enabled="false"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_about_us_button"
            android:text="@string/about_us"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:padding="@dimen/margin_default"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>